Minor addings and fixes to the inventory and chest opener pages: - Added a new modal for quantity selection for the inventory page. - Connected the chest opener page to the inventory page. - Fixed some CSS issues in the inventory and XP calculator pages. - Fixed some JavaScript issues in the chest opener and inventory pages. - Added new JSON data for chests.

--- a/src/assets/css/xpCalculator.css
+++ b/src/assets/css/xpCalculator.css
@@ -27,7 +27,7 @@
 }
 
 [data-theme="dark"] {
-    --xp-bg: #181c20;
+    --xp-bg: #222;
     --xp-text: #fff;
     --xp-title: #0096FF;
     --xp-label: #0096FF;
